Bug 1708324 - [Fission] Full screen button for YouTube video embedded on Reddit doesn't work r=spohl

During fullscreen transitions on Mac, ignore occlusion events caused by the widget DOM fullscreen transition effect which uses a temporary window.

Add a test that attempts to enter fullscreen from a non-focused window. This test is to ensure the fix (and future fixes) do not regress the focus requirement for fullscreen.

Differential Revision: https://phabricator.services.mozilla.com/D115046